# yandex_be_school

./: .pre-commit-config.yaml  Dockerfile  Logic.md  README.md  Task.md  alembic.ini  command  docker-compose.yaml  handler_test.ipynb  import.service  main.py  pylintrc  pyproject.toml  query.sql  sql_testing.sql
app/: main.py
app/api/: api.py  deps.py
app/api/endpoints/: api_stats.py  api_unit.py  shop_unit.py
app/api/handlers/: import_handler.py  сhild_handler.py
app/core/: config.py
app/crud/: base.py  crud_unit.py  unit_crud.py
app/db/: base.py  db.py  model.py  session.py
app/model/: db_models.py  db_unit.py  unit_model.py
app/models/: unit.py
app/schema/: base_schema.py  request.py  response.py  schemas.py
app/schemas/: models.py  schemas.py
docs/: Task.md
migrations/: env.py
migrations/versions/: 58991f87558b_.py  76e57ec655a2_.py
tests/: conftest.py  test_api.py
