[tool.poetry]
name = "yandex_be_school"
version = "0.1.0"
description = ""
authors = ["andrei <tricar5@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests = "^2.28.0"
psycopg2 = "^2.9.3"
pyaml = "^21.10.1"
alembic = "^1.8.0"
importlib-resources = "^5.8.0"
flake8 = "^4.0.1"
asyncpg = "^0.25.0"
greenlet = "^1.1.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}

[tool.poetry.dev-dependencies]
fastapi-code-generator = "^0.3.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
